cmake_minimum_required(VERSION 3.26)
project(C_CPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(Main27433 Main27433.cpp)
add_executable(Main1388 Main1388.cpp)
add_executable(Main1245 Main1245.cpp)
add_executable(test test.cpp)
add_executable(Main1306 Main1306.cpp)
add_executable(Main11779 Main11779.cpp)
add_executable(Main2800 Main2800.cpp)
add_executable(Main1421 Main1421.cpp)
add_executable(Main10810 Main10810.cpp)
add_executable(Main20955 Main20955.cpp)
add_executable(Main30410 Main30410.cpp)
add_executable(Main15900 Main15900.cpp)
add_executable(Main30408 Main30408.cpp)
add_executable(Main1062 Main1062.cpp)
add_executable(Main25195 Main25195.cpp)
add_executable(Main24479 Main24479.cpp)
add_executable(Main2048 Main2048.cpp)
add_executable(Main2699 Main2699.cpp)